# Computational-Physics

./: .gitignore  README.md
AI/: fwd.py  oving_2.py
AI/oving_1/: fwd.py  test.py
AI/oving_4/: decision.py  decision_tree.py  innlevering.docx
Big_data/Airbnb/: airbnb.py
Big_data/Airbnb/airbnb_datasets/: .listings_us.csv.swp  neighbourhoods.geojson
Computational_Physics/: Readme.md  test.py
Computational_Physics/Percolation/: .gitignore
Computational_Physics/Percolation/Results/: .pFunction.csv.swo
Computational_Physics/Percolation/Results/figures/: p_inf_plot.ps_tex
Computational_Physics/Percolation/bash_scripts/: fget.sh  fsend.sh
Computational_Physics/Percolation/include/: Lattice.hpp
Computational_Physics/Percolation/python_scripts/: biggest_cluster_plot.py  plotGrid.py
Computational_Physics/Perculation/: CMakeLists.txt  Makefile  Readme.md
Computational_Physics/Perculation/bash_scripts/: send.sh
Computational_Physics/Perculation/python_scripts/: biggest_cluster_plot.py  plot_all_curves.py  plot_avg_s_coeff.py  plot_p_inf_coeff.py  r_squared_plot.py
Computational_Physics/Perculation/src/: Activator.cpp
Computational_Physics/QM/: CMakeLists.txt  Makefile  Readme.md
Computational_Physics/QM/include/: Potentials.hpp  Schrodinger.tpp
Computational_Physics/QM/python_scripts/: eigenmodeplot.py  eigenvalueplot.py  find_roots.py  plotNumericalScheme.py  timeevolution.py
Computational_Physics/QM/src/: CMakeLists.txt  Makefile
Computational_Physics/oving_1/: .swp  2dplot.py  CMakeCache.txt  CMakeLists.txt  Euler.cpp  Makefile  cmake_install.cmake  data.txt  diffusion.py  diffusionPlot.py  explicitEuler.csv  main  main.cpp  plot.py  test.py  test1.py
Computational_Physics/oving_1/Assignment_2/: Animation.cpp  CMakeCache.txt  CMakeLists.txt  HelmHoltz2D.cpp  HelmHoltz2D.hpp  Makefile  Spec.cpp  TimeEvolution.cpp  TimeEvolution.hpp  TimeEvolution.tpp  analyticalplot.py  animate  cmake_install.cmake  dialogBoxBackupParameters.csv  eigenmodeplot.py  eigenvaluePlot.py  main
Computational_Physics/oving_1/Assignment_2/data/: eigenvalues.csv  eigenvector_1.csv  eigenvector_10.csv  eigenvector_100.csv  eigenvector_11.csv  eigenvector_12.csv  eigenvector_13.csv  eigenvector_14.csv  eigenvector_15.csv  eigenvector_16.csv  eigenvector_17.csv  eigenvector_18.csv  eigenvector_19.csv  eigenvector_1_100.csv  eigenvector_1_12.csv  eigenvector_1_25.csv  eigenvector_1_50.csv  eigenvector_1_6.csv  eigenvector_2.csv  eigenvector_20.csv  eigenvector_21.csv  eigenvector_22.csv  eigenvector_23.csv  eigenvector_24.csv  eigenvector_25.csv  eigenvector_26.csv  eigenvector_27.csv  eigenvector_28.csv  eigenvector_29.csv  eigenvector_2_100.csv  eigenvector_2_12.csv  eigenvector_2_25.csv  eigenvector_2_50.csv  eigenvector_2_6.csv  eigenvector_3.csv  eigenvector_30.csv  eigenvector_31.csv  eigenvector_32.csv  eigenvector_33.csv  eigenvector_34.csv  (+81 more)
Computational_Physics/oving_1/Assignment_3/: .laxWendroff.csv.swp  CMakeCache.txt  CMakeLists.txt  Hopf.cpp  Hopf.hpp  Main.cpp  Makefile  cmake_install.cmake  main  plot.py
Computational_Physics/oving_1/Pre_oving/: CMakeCache.txt  Makefile  cmake_install.cmake  data.txt  main  main.cpp  plot.py
Computational_Physics/oving_1/csv-files/: crankNicolson
Computational_Physics/oving_2/: CMakeLists.txt  Readme.md
Computational_Physics/oving_2/Assignment_1/: CMakeCache.txt  CMakeLists.txt  Lattice.cpp  Lattice.hpp  Main.cpp  Makefile  analysis.txt  cmake_install.cmake  gmon.out  main  plot.py
Computational_Physics/oving_2/Results/figures/: p_inf_plot.ps
Computational_Physics/oving_2/Task_1/: Activator.cpp  Activator.hpp  CMakeCache.txt  CMakeLists.txt  Lattice.cpp  Lattice.hpp  Main.cpp  Makefile  analys.txt  analysis.txt  analysis1.txt  average_data.py  avg.py  avg_averaged  cmake_install.cmake  coeffplot.py  connect.sh  get.sh  gmon.out  login.sh  main  main_hony  main_sq  main_tri  params.sh  pinf.py  plot.py  plotGrid.py  plot_all_curves.py  plot_avg_s_coeff.py  plot_p_inf_coeff.py  r_squared_plot.py  run4ever.sh
Computational_Physics/oving_2/include/: Activator.hpp
Computational_Physics/oving_2/src/: CMakeLists.txt  Makefile
Computational_Physics/oving_3/: CMakeCache.txt  CMakeLists.txt  InitialConditions.hpp  Main.cpp  Makefile  Potentials.hpp  Readme.md  Schrodinger.cpp  Schrodinger.hpp  Schrodinger.tpp  Step_evolution.cpp  Step_evolution.out  cmake_install.cmake  eigenmodeplot.py  find_roots.py  main  main.out  plotEulerScheme.py  plotNumericalScheme.py  plotSolution.py  plot_one_eigenmode.py  stepEvolution  timeevolution.py
Computational_Physics/oving_3/python_scripts/: eigenvalueplot.py  find_roots.py
Computational_Physics/oving_3/src/: cmake_install.cmake
